# browsync

./: .gitignore  Cargo.toml  README.md  TEST_REPORT.md
.github/workflows/: ci.yml  release.yml
crates/browsync-app/: Cargo.toml  tauri.conf.json
crates/browsync-app/src/: commands.rs  main.rs
crates/browsync-app/ui/: index.html  test.html
crates/browsync-cli/: Cargo.toml
crates/browsync-cli/src/: cli.rs  main.rs
crates/browsync-cli/src/commands/: auth.rs  detect.rs  export.rs  import.rs  mod.rs  open.rs  search.rs  status.rs
crates/browsync-cli/src/tui/: app.rs  mod.rs
crates/browsync-core/: Cargo.toml
crates/browsync-core/src/: db.rs  detect.rs  keychain.rs  lib.rs  models.rs  sync.rs
crates/browsync-core/src/exporters/: csv.rs  html.rs  json.rs  mod.rs
crates/browsync-core/src/parsers/: chrome.rs  firefox.rs  mod.rs  safari.rs
crates/browsync-core/tests/: integration.rs
crates/browsync-daemon/: Cargo.toml
crates/browsync-daemon/src/: ipc.rs  main.rs  scheduler.rs  watcher.rs
docs/: index.html  install.ps1  install.sh
extension/: manifest.json  native-messaging-host.json  package.json  popup.html  tsconfig.json
extension/src/: background.ts  popup.ts
