[workspace]
resolver = "2"
members = [
    "crates/browsync-core",
    "crates/browsync-cli",
    "crates/browsync-daemon",
    "crates/browsync-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["browsync contributors"]

[workspace.dependencies]
browsync-core = { path = "crates/browsync-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
