[package]
name = "browsync-app"
version.workspace = true
edition.workspace = true

[dependencies]
browsync-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "browsync-app"
path = "src/main.rs"
